--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -3,4 +3,11 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the Lily58 OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
+
+#deep sleep after 30 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP_TIMEOUT=3600000
+
+#change board name
+CONFIG_ZMK_KEYBOARD_NAME="Moonboard-58"
