--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -10,4 +10,4 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_SLEEP_TIMEOUT=3600000
 
 #change board name
-CONFIG_ZMK_KEYBOARD_NAME="Moonboard-58"
+CONFIG_ZMK_KEYBOARD_NAME="Moonboard"
