sleep code updates

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,3 +1,6 @@
+#change board name
+CONFIG_ZMK_KEYBOARD_NAME="Moonboard"
+
 # Uncomment to enable encoder
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
@@ -5,9 +8,6 @@
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-#deep sleep after 30 minutes
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_SLEEP_TIMEOUT=3600000
-
-#change board name
-CONFIG_ZMK_KEYBOARD_NAME="Moonboard"
+CONFIG_ZMK_SLEEP=y # Enable deep sleep support
+# Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
