--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_SLEEP=y # Enable deep sleep support
 # Milliseconds of inactivity before entering deep sleep
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+#Enable media keys
+EXTRAKEY_ENABLE = yes
